Optimize production container memory usage